[Update] インスペクション & コード整形